# toy_robot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
source/: GameLoop.cc  GameLoop.hh  Robot.cc  Robot.hh  Table.cc  Table.hh  common.cc  common.hh  main.cc
tests/: dummy_test.cpp  test_robot.cpp  test_table.cpp
